navbar top spacing fixed

--- a/src/user/home_page.css
+++ b/src/user/home_page.css
@@ -1,6 +1,6 @@
 /* HERO SECTION */
 .hero-section {
-  height: 90vh;
+  height: 100vh;
   width: 100%;
   /* Background image handled in JS to avoid webpack resolve errors */
   background-size: cover;
@@ -9,9 +9,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: -80px;
+  margin-top: -90px;
+  overflow: hidden;
   /* Counteract sticky navbar */
 }
+
 
 .hero-overlay {
   position: absolute;
